--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dropzone": "^14.2.3",
     "react-howler": "^5.2.0",
     "react-icons": "^4.12.0",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
