--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "react-dropzone": "^14.2.3",
     "react-howler": "^5.2.0",
     "react-icons": "^4.12.0",
+    "react-slick": "^0.30.3",
     "react-switch": "^7.0.0",
     "sandbox": "file:",
-    "styled-components": "^6.1.12"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
